--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link href="./CSS/stylesheet.css" type="text/css" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
-</head>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <title>Frontend Mentor | QR code component</title>
+
+</head>
 <body>
 
-  <section id="QR_modal">
-    <article>
-      <img src="./images/image-qr-code.png">
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </article>
-  </section>
+    <section>
+        <article class="modal">
+            <img src="./images/image-qr-code.png">
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </article>
+    </section>
+  
+    <section>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
+        </div>
+    </section>
+  
   
 </body>
-
-<footer>
-  <section class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
-  </section>
-</footer>
-
 </html>
