--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 <body>
 
-    <section>
-        <article class="modal">
-            <img src="./images/image-qr-code.png">
+    <section id="modal">
+        <img src="./images/image-qr-code.png" alt="A white QR code on a medium blue background.">
+        <article>
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </article>
     </section>
   
+</body>
+
+<footer>
     <section>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
         </div>
     </section>
-  
-  
-</body>
+</footer>
+
 </html>
