--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
   <title>Frontend Mentor | QR code component</title>
 
 </head>
-<body>
+    <body>
 
-    <section id="modal">
-        <img src="./images/image-qr-code.png" alt="A white QR code on a medium blue background.">
-        <article>
-            <h1>Improve your front-end skills by building projects</h1>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </article>
-    </section>
-  
-</body>
+        <section id="modal">
+            <div id="image_container">
+                <img src="./images/Oval.svg" class="oval">
+                <img src="./images/qr-code.svg" class="qr_code">
+            </div>
+            <article>
+                <h1>Improve your front-end skills by building projects</h1>
+                <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            </article>
+        </section>
+    
+    </body>
 
-<footer>
-    <section>
-        <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-            Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
-        </div>
-    </section>
-</footer>
+    <footer>
+        <section>
+            <div class="attribution">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+                Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
+            </div>
+        </section>
+    </footer>
 
 </html>
