Fixed the alt text for the images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <section id="modal">
             <div id="image_container">
-                <img src="./images/Oval.svg" class="oval">
-                <img src="./images/qr-code.svg" class="qr_code">
+                <img src="./images/Oval.svg" class="oval" alt="Blue background for the following QR code.">
+                <img src="./images/qr-code.svg" class="qr_code" alt="A white QR code that takes you to the website www.frontendmentor.io/home">
             </div>
             <article>
                 <h1>Improve your front-end skills by building projects</h1>
