--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="./style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <title>Frontend Mentor | QR code component</title>
+    <title>Frontend Mentor | QR code component</title>
+  </head>
+  <body>
+    <section id="modal">
+      <div id="image_container">
+        <img
+          src="./images/Oval.svg"
+          class="oval"
+          alt="Blue background for the following QR code."
+        />
+        <img
+          src="./images/qr-code.svg"
+          class="qr_code"
+          alt="A white QR code that takes you to the website www.frontendmentor.io/home"
+        />
+      </div>
+      <article>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </article>
+    </section>
+  </body>
 
-</head>
-    <body>
-
-        <section id="modal">
-            <div id="image_container">
-                <img src="./images/Oval.svg" class="oval" alt="Blue background for the following QR code.">
-                <img src="./images/qr-code.svg" class="qr_code" alt="A white QR code that takes you to the website www.frontendmentor.io/home">
-            </div>
-            <article>
-                <h1>Improve your front-end skills by building projects</h1>
-                <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-            </article>
-        </section>
-    
-    </body>
-
-    <footer>
-        <section>
-            <div class="attribution">
-                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-                Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
-            </div>
-        </section>
-    </footer>
-
+  <footer>
+    <section>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://sarumakes.github.io">SaruMakes</a>.
+      </div>
+    </section>
+  </footer>
 </html>
